sdk/avs/arm-avs/samples/v3/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                               | **Description**                                                                                                                                                                                                                                |
| ------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [addonsCreateOrUpdateSample.js][addonscreateorupdatesample]                                 | Create or update a addon in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Addons_CreateOrUpdate_ArcReg.json                                                               |
| [addonsDeleteSample.js][addonsdeletesample]                                                 | Delete a addon in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Addons_Delete.json                                                                                        |
| [addonsGetSample.js][addonsgetsample]                                                       | Get an addon by name in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Addons_Get_ArcReg.json                                                                              |
| [addonsListSample.js][addonslistsample]                                                     | List addons in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Addons_List.json                                                                                             |
| [authorizationsCreateOrUpdateSample.js][authorizationscreateorupdatesample]                 | Create or update an ExpressRoute Circuit Authorization in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Authorizations_CreateOrUpdate.json                                |
| [authorizationsDeleteSample.js][authorizationsdeletesample]                                 | Delete an ExpressRoute Circuit Authorization in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Authorizations_Delete.json                                                  |
| [authorizationsGetSample.js][authorizationsgetsample]                                       | Get an ExpressRoute Circuit Authorization by name in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Authorizations_Get.json                                                |
| [authorizationsListSample.js][authorizationslistsample]                                     | List ExpressRoute Circuit Authorizations in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Authorizations_List.json                                                        |
| [cloudLinksCreateOrUpdateSample.js][cloudlinkscreateorupdatesample]                         | Create or update a cloud link in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/CloudLinks_CreateOrUpdate.json                                                             |
| [cloudLinksDeleteSample.js][cloudlinksdeletesample]                                         | Delete a cloud link in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/CloudLinks_Delete.json                                                                               |
| [cloudLinksGetSample.js][cloudlinksgetsample]                                               | Get an cloud link by name in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/CloudLinks_Get.json                                                                            |
| [cloudLinksListSample.js][cloudlinkslistsample]                                             | List cloud link in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/CloudLinks_List.json                                                                                     |
| [clustersCreateOrUpdateSample.js][clusterscreateorupdatesample]                             | Create or update a cluster in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Clusters_CreateOrUpdate.json                                                                  |
| [clustersDeleteSample.js][clustersdeletesample]                                             | Delete a cluster in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Clusters_Delete.json                                                                                    |
| [clustersGetSample.js][clustersgetsample]                                                   | Get a cluster by name in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Clusters_Get.json                                                                                  |
| [clustersListSample.js][clusterslistsample]                                                 | List clusters in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Clusters_List.json                                                                                         |
| [clustersListZonesSample.js][clusterslistzonessample]                                       | List hosts by zone in a cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Clusters_ListZones.json                                                                                     |
| [clustersUpdateSample.js][clustersupdatesample]                                             | Update a cluster in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Clusters_Update.json                                                                                    |
| [datastoresCreateOrUpdateSample.js][datastorescreateorupdatesample]                         | Create or update a datastore in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Datastores_CreateOrUpdate.json                                                      |
| [datastoresDeleteSample.js][datastoresdeletesample]                                         | Delete a datastore in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Datastores_Delete.json                                                                        |
| [datastoresGetSample.js][datastoresgetsample]                                               | Get a datastore in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Datastores_Get.json                                                                              |
| [datastoresListSample.js][datastoreslistsample]                                             | List datastores in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Datastores_List.json                                                                             |
| [globalReachConnectionsCreateOrUpdateSample.js][globalreachconnectionscreateorupdatesample] | Create or update a global reach connection in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/GlobalReachConnections_CreateOrUpdate.json                                    |
| [globalReachConnectionsDeleteSample.js][globalreachconnectionsdeletesample]                 | Delete a global reach connection in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/GlobalReachConnections_Delete.json                                                      |
| [globalReachConnectionsGetSample.js][globalreachconnectionsgetsample]                       | Get a global reach connection by name in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/GlobalReachConnections_Get.json                                                    |
| [globalReachConnectionsListSample.js][globalreachconnectionslistsample]                     | List global reach connections in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/GlobalReachConnections_List.json                                                           |
| [hcxEnterpriseSitesCreateOrUpdateSample.js][hcxenterprisesitescreateorupdatesample]         | Create or update an HCX Enterprise Site in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/HcxEnterpriseSites_CreateOrUpdate.json                                           |
| [hcxEnterpriseSitesDeleteSample.js][hcxenterprisesitesdeletesample]                         | Delete an HCX Enterprise Site in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/HcxEnterpriseSites_Delete.json                                                             |
| [hcxEnterpriseSitesGetSample.js][hcxenterprisesitesgetsample]                               | Get an HCX Enterprise Site by name in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/HcxEnterpriseSites_Get.json                                                           |
| [hcxEnterpriseSitesListSample.js][hcxenterprisesiteslistsample]                             | List HCX Enterprise Sites in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/HcxEnterpriseSites_List.json                                                                   |
| [locationsCheckQuotaAvailabilitySample.js][locationscheckquotaavailabilitysample]           | Return quota for subscription by region x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Locations_CheckQuotaAvailability.json                                                               |
| [locationsCheckTrialAvailabilitySample.js][locationschecktrialavailabilitysample]           | Return trial status for subscription by region x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Locations_CheckTrialAvailability.json                                                        |
| [operationsListSample.js][operationslistsample]                                             | Lists all of the available operations x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Operations_List.json                                                                                  |
| [placementPoliciesCreateOrUpdateSample.js][placementpoliciescreateorupdatesample]           | Create or update a placement policy in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PlacementPolicies_CreateOrUpdate.json                                        |
| [placementPoliciesDeleteSample.js][placementpoliciesdeletesample]                           | Delete a placement policy in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PlacementPolicies_Delete.json                                                          |
| [placementPoliciesGetSample.js][placementpoliciesgetsample]                                 | Get a placement policy by name in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PlacementPolicies_Get.json                                                        |
| [placementPoliciesListSample.js][placementpolicieslistsample]                               | List placement policies in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PlacementPolicies_List.json                                                              |
| [placementPoliciesUpdateSample.js][placementpoliciesupdatesample]                           | Update a placement policy in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PlacementPolicies_Update.json                                                          |
| [privateCloudsCreateOrUpdateSample.js][privatecloudscreateorupdatesample]                   | Create or update a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_CreateOrUpdate.json                                                                          |
| [privateCloudsDeleteSample.js][privatecloudsdeletesample]                                   | Delete a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_Delete.json                                                                                            |
| [privateCloudsGetSample.js][privatecloudsgetsample]                                         | Get a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_Get.json                                                                                                  |
| [privateCloudsListAdminCredentialsSample.js][privatecloudslistadmincredentialssample]       | List the admin credentials for the private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_ListAdminCredentials.json                                                    |
| [privateCloudsListInSubscriptionSample.js][privatecloudslistinsubscriptionsample]           | List private clouds in a subscription x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_ListInSubscription.json                                                                 |
| [privateCloudsListSample.js][privatecloudslistsample]                                       | List private clouds in a resource group x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_List.json                                                                             |
| [privateCloudsRotateNsxtPasswordSample.js][privatecloudsrotatensxtpasswordsample]           | Rotate the NSX-T Manager password x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_RotateNsxtPassword.json                                                                     |
| [privateCloudsRotateVcenterPasswordSample.js][privatecloudsrotatevcenterpasswordsample]     | Rotate the vCenter password x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_RotateVcenterPassword.json                                                                        |
| [privateCloudsUpdateSample.js][privatecloudsupdatesample]                                   | Update a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_Update.json                                                                                            |
| [scriptCmdletsGetSample.js][scriptcmdletsgetsample]                                         | Return information about a script cmdlet resource in a specific package on a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptCmdlets_Get.json                           |
| [scriptCmdletsListSample.js][scriptcmdletslistsample]                                       | List script cmdlet resources available for a private cloud to create a script execution resource on a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptCmdlets_List.json |
| [scriptExecutionsCreateOrUpdateSample.js][scriptexecutionscreateorupdatesample]             | Create or update a script execution in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptExecutions_CreateOrUpdate.json                                                 |
| [scriptExecutionsDeleteSample.js][scriptexecutionsdeletesample]                             | Cancel a ScriptExecution in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptExecutions_Delete.json                                                                    |
| [scriptExecutionsGetExecutionLogsSample.js][scriptexecutionsgetexecutionlogssample]         | Return the logs for a script execution resource x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptExecutions_GetExecutionLogs.json                                                      |
| [scriptExecutionsGetSample.js][scriptexecutionsgetsample]                                   | Get an script execution by name in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptExecutions_Get.json                                                                |
| [scriptExecutionsListSample.js][scriptexecutionslistsample]                                 | List script executions in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptExecutions_List.json                                                                        |
| [scriptPackagesGetSample.js][scriptpackagesgetsample]                                       | Get a script package available to run on a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptPackages_Get.json                                                            |
| [scriptPackagesListSample.js][scriptpackageslistsample]                                     | List script packages available to run on the private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptPackages_List.json                                                         |
| [virtualMachinesGetSample.js][virtualmachinesgetsample]                                     | Get a virtual machine by id in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/VirtualMachines_Get.json                                                             |
| [virtualMachinesListSample.js][virtualmachineslistsample]                                   | List of virtual machines in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/VirtualMachines_List.json                                                               |
| [virtualMachinesRestrictMovementSample.js][virtualmachinesrestrictmovementsample]           | Enable or disable DRS-driven VM movement restriction x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/VirtualMachines_RestrictMovement.json                                                  |
| [workloadNetworksCreateDhcpSample.js][workloadnetworkscreatedhcpsample]                     | Create dhcp by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_CreateDhcpConfigurations.json                                       |
| [workloadNetworksCreateDnsServiceSample.js][workloadnetworkscreatednsservicesample]         | Create a DNS service by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_CreateDnsServices.json                                     |
| [workloadNetworksCreateDnsZoneSample.js][workloadnetworkscreatednszonesample]               | Create a DNS zone by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_CreateDnsZones.json                                           |
| [workloadNetworksCreatePortMirroringSample.js][workloadnetworkscreateportmirroringsample]   | Create a port mirroring profile by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_CreatePortMirroringProfiles.json                |
| [workloadNetworksCreatePublicIPSample.js][workloadnetworkscreatepublicipsample]             | Create a Public IP Block by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_CreatePublicIPs.json                                   |
| [workloadNetworksCreateSegmentsSample.js][workloadnetworkscreatesegmentssample]             | Create a segment by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_CreateSegments.json                                            |
| [workloadNetworksCreateVMGroupSample.js][workloadnetworkscreatevmgroupsample]               | Create a vm group by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_CreateVMGroups.json                                           |
| [workloadNetworksDeleteDhcpSample.js][workloadnetworksdeletedhcpsample]                     | Delete dhcp by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_DeleteDhcpConfigurations.json                                       |
| [workloadNetworksDeleteDnsServiceSample.js][workloadnetworksdeletednsservicesample]         | Delete a DNS service by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_DeleteDnsServices.json                                     |
| [workloadNetworksDeleteDnsZoneSample.js][workloadnetworksdeletednszonesample]               | Delete a DNS zone by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_DeleteDnsZones.json                                           |
| [workloadNetworksDeletePortMirroringSample.js][workloadnetworksdeleteportmirroringsample]   | Delete a port mirroring profile by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_DeletePortMirroringProfiles.json                |
| [workloadNetworksDeletePublicIPSample.js][workloadnetworksdeletepublicipsample]             | Delete a Public IP Block by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_DeletePublicIPs.json                                   |
| [workloadNetworksDeleteSegmentSample.js][workloadnetworksdeletesegmentsample]               | Delete a segment by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_DeleteSegments.json                                            |
| [workloadNetworksDeleteVMGroupSample.js][workloadnetworksdeletevmgroupsample]               | Delete a vm group by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_DeleteVMGroups.json                                           |
| [workloadNetworksGetDhcpSample.js][workloadnetworksgetdhcpsample]                           | Get dhcp by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetDhcpConfigurations.json                                             |
| [workloadNetworksGetDnsServiceSample.js][workloadnetworksgetdnsservicesample]               | Get a DNS service by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetDnsServices.json                                           |
| [workloadNetworksGetDnsZoneSample.js][workloadnetworksgetdnszonesample]                     | Get a DNS zone by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetDnsZones.json                                                 |
| [workloadNetworksGetGatewaySample.js][workloadnetworksgetgatewaysample]                     | Get a gateway by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetGateway.json                                                   |
| [workloadNetworksGetPortMirroringSample.js][workloadnetworksgetportmirroringsample]         | Get a port mirroring profile by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetPortMirroringProfiles.json                      |
| [workloadNetworksGetPublicIPSample.js][workloadnetworksgetpublicipsample]                   | Get a Public IP Block by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetPublicIPs.json                                         |
| [workloadNetworksGetSample.js][workloadnetworksgetsample]                                   | Get a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_Get.json                                                                             |
| [workloadNetworksGetSegmentSample.js][workloadnetworksgetsegmentsample]                     | Get a segment by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetSegments.json                                                  |
| [workloadNetworksGetVMGroupSample.js][workloadnetworksgetvmgroupsample]                     | Get a vm group by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetVMGroups.json                                                 |
| [workloadNetworksGetVirtualMachineSample.js][workloadnetworksgetvirtualmachinesample]       | Get a virtual machine by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetVirtualMachine.json                                    |
| [workloadNetworksListDhcpSample.js][workloadnetworkslistdhcpsample]                         | List dhcp in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListDhcpConfigurations.json                                                 |
| [workloadNetworksListDnsServicesSample.js][workloadnetworkslistdnsservicessample]           | List of DNS services in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListDnsServices.json                                             |
| [workloadNetworksListDnsZonesSample.js][workloadnetworkslistdnszonessample]                 | List of DNS zones in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListDnsZones.json                                                   |
| [workloadNetworksListGatewaysSample.js][workloadnetworkslistgatewayssample]                 | List of gateways in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListGateways.json                                                    |
| [workloadNetworksListPortMirroringSample.js][workloadnetworkslistportmirroringsample]       | List of port mirroring profiles in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListPortMirroringProfiles.json                        |
| [workloadNetworksListPublicIPsSample.js][workloadnetworkslistpublicipssample]               | List of Public IP Blocks in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListPublicIPs.json                                           |
| [workloadNetworksListSample.js][workloadnetworkslistsample]                                 | List of workload networks in a private cloud. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_List.json                                                                    |
| [workloadNetworksListSegmentsSample.js][workloadnetworkslistsegmentssample]                 | List of segments in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListSegments.json                                                    |
| [workloadNetworksListVMGroupsSample.js][workloadnetworkslistvmgroupssample]                 | List of vm groups in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListVMGroups.json                                                   |
| [workloadNetworksListVirtualMachinesSample.js][workloadnetworkslistvirtualmachinessample]   | List of virtual machines in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListVirtualMachines.json                                     |
| [workloadNetworksUpdateDhcpSample.js][workloadnetworksupdatedhcpsample]                     | Create or update dhcp by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_UpdateDhcpConfigurations.json                             |
| [workloadNetworksUpdateDnsServiceSample.js][workloadnetworksupdatednsservicesample]         | Create or update a DNS service by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_UpdateDnsServices.json                           |
| [workloadNetworksUpdateDnsZoneSample.js][workloadnetworksupdatednszonesample]               | Create or update a DNS zone by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_UpdateDnsZones.json                                 |
| [workloadNetworksUpdatePortMirroringSample.js][workloadnetworksupdateportmirroringsample]   | Create or update a port mirroring profile by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_UpdatePortMirroringProfiles.json      |
| [workloadNetworksUpdateSegmentsSample.js][workloadnetworksupdatesegmentssample]             | Create or update a segment by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_UpdateSegments.json                                  |
| [workloadNetworksUpdateVMGroupSample.js][workloadnetworksupdatevmgroupsample]               | Create or update a vm group by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_UpdateVMGroups.json                                 |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node addonsCreateOrUpdateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env AVS_SUBSCRIPTION_ID="<avs subscription id>" AVS_RESOURCE_GROUP="<avs resource group>" AVS_SUBSCRIPTION_ID="<avs subscription id>" AVS_RESOURCE_GROUP="<avs resource group>" AVS_SUBSCRIPTION_ID="<avs subscription id>" AVS_RESOURCE_GROUP="<avs resource group>" AVS_SUBSCRIPTION_ID="<avs subscription id>" AVS_RESOURCE_GROUP="<avs resource group>" node addonsCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[addonscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/addonsCreateOrUpdateSample.js
[addonsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/addonsDeleteSample.js
[addonsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/addonsGetSample.js
[addonslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/addonsListSample.js
[authorizationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/authorizationsCreateOrUpdateSample.js
[authorizationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/authorizationsDeleteSample.js
[authorizationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/authorizationsGetSample.js
[authorizationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/authorizationsListSample.js
[cloudlinkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/cloudLinksCreateOrUpdateSample.js
[cloudlinksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/cloudLinksDeleteSample.js
[cloudlinksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/cloudLinksGetSample.js
[cloudlinkslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/cloudLinksListSample.js
[clusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/clustersCreateOrUpdateSample.js
[clustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/clustersDeleteSample.js
[clustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/clustersGetSample.js
[clusterslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/clustersListSample.js
[clusterslistzonessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/clustersListZonesSample.js
[clustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/clustersUpdateSample.js
[datastorescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/datastoresCreateOrUpdateSample.js
[datastoresdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/datastoresDeleteSample.js
[datastoresgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/datastoresGetSample.js
[datastoreslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/datastoresListSample.js
[globalreachconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/globalReachConnectionsCreateOrUpdateSample.js
[globalreachconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/globalReachConnectionsDeleteSample.js
[globalreachconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/globalReachConnectionsGetSample.js
[globalreachconnectionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/globalReachConnectionsListSample.js
[hcxenterprisesitescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/hcxEnterpriseSitesCreateOrUpdateSample.js
[hcxenterprisesitesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/hcxEnterpriseSitesDeleteSample.js
[hcxenterprisesitesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/hcxEnterpriseSitesGetSample.js
[hcxenterprisesiteslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/hcxEnterpriseSitesListSample.js
[locationscheckquotaavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/locationsCheckQuotaAvailabilitySample.js
[locationschecktrialavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/locationsCheckTrialAvailabilitySample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/operationsListSample.js
[placementpoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/placementPoliciesCreateOrUpdateSample.js
[placementpoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/placementPoliciesDeleteSample.js
[placementpoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/placementPoliciesGetSample.js
[placementpolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/placementPoliciesListSample.js
[placementpoliciesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/placementPoliciesUpdateSample.js
[privatecloudscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/privateCloudsCreateOrUpdateSample.js
[privatecloudsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/privateCloudsDeleteSample.js
[privatecloudsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/privateCloudsGetSample.js
[privatecloudslistadmincredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/privateCloudsListAdminCredentialsSample.js
[privatecloudslistinsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/privateCloudsListInSubscriptionSample.js
[privatecloudslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/privateCloudsListSample.js
[privatecloudsrotatensxtpasswordsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/privateCloudsRotateNsxtPasswordSample.js
[privatecloudsrotatevcenterpasswordsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/privateCloudsRotateVcenterPasswordSample.js
[privatecloudsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/privateCloudsUpdateSample.js
[scriptcmdletsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/scriptCmdletsGetSample.js
[scriptcmdletslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/scriptCmdletsListSample.js
[scriptexecutionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/scriptExecutionsCreateOrUpdateSample.js
[scriptexecutionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/scriptExecutionsDeleteSample.js
[scriptexecutionsgetexecutionlogssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/scriptExecutionsGetExecutionLogsSample.js
[scriptexecutionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/scriptExecutionsGetSample.js
[scriptexecutionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/scriptExecutionsListSample.js
[scriptpackagesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/scriptPackagesGetSample.js
[scriptpackageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/scriptPackagesListSample.js
[virtualmachinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/virtualMachinesGetSample.js
[virtualmachineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/virtualMachinesListSample.js
[virtualmachinesrestrictmovementsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/virtualMachinesRestrictMovementSample.js
[workloadnetworkscreatedhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksCreateDhcpSample.js
[workloadnetworkscreatednsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksCreateDnsServiceSample.js
[workloadnetworkscreatednszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksCreateDnsZoneSample.js
[workloadnetworkscreateportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksCreatePortMirroringSample.js
[workloadnetworkscreatepublicipsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksCreatePublicIPSample.js
[workloadnetworkscreatesegmentssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksCreateSegmentsSample.js
[workloadnetworkscreatevmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksCreateVMGroupSample.js
[workloadnetworksdeletedhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksDeleteDhcpSample.js
[workloadnetworksdeletednsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksDeleteDnsServiceSample.js
[workloadnetworksdeletednszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksDeleteDnsZoneSample.js
[workloadnetworksdeleteportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksDeletePortMirroringSample.js
[workloadnetworksdeletepublicipsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksDeletePublicIPSample.js
[workloadnetworksdeletesegmentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksDeleteSegmentSample.js
[workloadnetworksdeletevmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksDeleteVMGroupSample.js
[workloadnetworksgetdhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksGetDhcpSample.js
[workloadnetworksgetdnsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksGetDnsServiceSample.js
[workloadnetworksgetdnszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksGetDnsZoneSample.js
[workloadnetworksgetgatewaysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksGetGatewaySample.js
[workloadnetworksgetportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksGetPortMirroringSample.js
[workloadnetworksgetpublicipsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksGetPublicIPSample.js
[workloadnetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksGetSample.js
[workloadnetworksgetsegmentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksGetSegmentSample.js
[workloadnetworksgetvmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksGetVMGroupSample.js
[workloadnetworksgetvirtualmachinesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksGetVirtualMachineSample.js
[workloadnetworkslistdhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksListDhcpSample.js
[workloadnetworkslistdnsservicessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksListDnsServicesSample.js
[workloadnetworkslistdnszonessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksListDnsZonesSample.js
[workloadnetworkslistgatewayssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksListGatewaysSample.js
[workloadnetworkslistportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksListPortMirroringSample.js
[workloadnetworkslistpublicipssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksListPublicIPsSample.js
[workloadnetworkslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksListSample.js
[workloadnetworkslistsegmentssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksListSegmentsSample.js
[workloadnetworkslistvmgroupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksListVMGroupsSample.js
[workloadnetworkslistvirtualmachinessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksListVirtualMachinesSample.js
[workloadnetworksupdatedhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksUpdateDhcpSample.js
[workloadnetworksupdatednsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksUpdateDnsServiceSample.js
[workloadnetworksupdatednszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksUpdateDnsZoneSample.js
[workloadnetworksupdateportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksUpdatePortMirroringSample.js
[workloadnetworksupdatesegmentssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksUpdateSegmentsSample.js
[workloadnetworksupdatevmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/javascript/workloadNetworksUpdateVMGroupSample.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-avs
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/avs/arm-avs/README.md
