sdk/avs/arm-avs/samples/v7/javascript/README.md
# @azure/arm-avs client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-avs in some common scenarios.

| **File Name**                                                                               | **Description**                                                                                                                          |
| ------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------- |
| [addonsCreateOrUpdateSample.js][addonscreateorupdatesample]                                 | create a Addon x-ms-original-file: 2025-09-01/Addons_CreateOrUpdate_ArcReg.json                                                          |
| [addonsDeleteSample.js][addonsdeletesample]                                                 | delete a Addon x-ms-original-file: 2025-09-01/Addons_Delete.json                                                                         |
| [addonsGetSample.js][addonsgetsample]                                                       | get a Addon x-ms-original-file: 2025-09-01/Addons_Get_ArcReg.json                                                                        |
| [addonsListSample.js][addonslistsample]                                                     | list Addon resources by PrivateCloud x-ms-original-file: 2025-09-01/Addons_List.json                                                     |
| [authorizationsCreateOrUpdateSample.js][authorizationscreateorupdatesample]                 | create a ExpressRouteAuthorization x-ms-original-file: 2025-09-01/Authorizations_CreateOrUpdate.json                                     |
| [authorizationsDeleteSample.js][authorizationsdeletesample]                                 | delete a ExpressRouteAuthorization x-ms-original-file: 2025-09-01/Authorizations_Delete.json                                             |
| [authorizationsGetSample.js][authorizationsgetsample]                                       | get a ExpressRouteAuthorization x-ms-original-file: 2025-09-01/Authorizations_Get.json                                                   |
| [authorizationsListSample.js][authorizationslistsample]                                     | list ExpressRouteAuthorization resources by PrivateCloud x-ms-original-file: 2025-09-01/Authorizations_List.json                         |
| [cloudLinksCreateOrUpdateSample.js][cloudlinkscreateorupdatesample]                         | create a CloudLink x-ms-original-file: 2025-09-01/CloudLinks_CreateOrUpdate.json                                                         |
| [cloudLinksDeleteSample.js][cloudlinksdeletesample]                                         | delete a CloudLink x-ms-original-file: 2025-09-01/CloudLinks_Delete.json                                                                 |
| [cloudLinksGetSample.js][cloudlinksgetsample]                                               | get a CloudLink x-ms-original-file: 2025-09-01/CloudLinks_Get.json                                                                       |
| [cloudLinksListSample.js][cloudlinkslistsample]                                             | list CloudLink resources by PrivateCloud x-ms-original-file: 2025-09-01/CloudLinks_List.json                                             |
| [clustersCreateOrUpdateSample.js][clusterscreateorupdatesample]                             | create a Cluster x-ms-original-file: 2025-09-01/Clusters_CreateOrUpdate.json                                                             |
| [clustersDeleteSample.js][clustersdeletesample]                                             | delete a Cluster x-ms-original-file: 2025-09-01/Clusters_Delete.json                                                                     |
| [clustersGetSample.js][clustersgetsample]                                                   | get a Cluster x-ms-original-file: 2025-09-01/Clusters_Get.json                                                                           |
| [clustersListSample.js][clusterslistsample]                                                 | list Cluster resources by PrivateCloud x-ms-original-file: 2025-09-01/Clusters_List.json                                                 |
| [clustersListZonesSample.js][clusterslistzonessample]                                       | list hosts by zone in a cluster x-ms-original-file: 2025-09-01/Clusters_ListZones.json                                                   |
| [clustersUpdateSample.js][clustersupdatesample]                                             | update a Cluster x-ms-original-file: 2025-09-01/Clusters_Update.json                                                                     |
| [datastoresCreateOrUpdateSample.js][datastorescreateorupdatesample]                         | create a Datastore x-ms-original-file: 2025-09-01/Datastores_CreateOrUpdate.json                                                         |
| [datastoresDeleteSample.js][datastoresdeletesample]                                         | delete a Datastore x-ms-original-file: 2025-09-01/Datastores_Delete.json                                                                 |
| [datastoresGetSample.js][datastoresgetsample]                                               | get a Datastore x-ms-original-file: 2025-09-01/Datastores_Get.json                                                                       |
| [datastoresListSample.js][datastoreslistsample]                                             | list Datastore resources by Cluster x-ms-original-file: 2025-09-01/Datastores_List.json                                                  |
| [globalReachConnectionsCreateOrUpdateSample.js][globalreachconnectionscreateorupdatesample] | create a GlobalReachConnection x-ms-original-file: 2025-09-01/GlobalReachConnections_CreateOrUpdate.json                                 |
| [globalReachConnectionsDeleteSample.js][globalreachconnectionsdeletesample]                 | delete a GlobalReachConnection x-ms-original-file: 2025-09-01/GlobalReachConnections_Delete.json                                         |
| [globalReachConnectionsGetSample.js][globalreachconnectionsgetsample]                       | get a GlobalReachConnection x-ms-original-file: 2025-09-01/GlobalReachConnections_Get.json                                               |
| [globalReachConnectionsListSample.js][globalreachconnectionslistsample]                     | list GlobalReachConnection resources by PrivateCloud x-ms-original-file: 2025-09-01/GlobalReachConnections_List.json                     |
| [hcxEnterpriseSitesCreateOrUpdateSample.js][hcxenterprisesitescreateorupdatesample]         | create a HcxEnterpriseSite x-ms-original-file: 2025-09-01/HcxEnterpriseSites_CreateOrUpdate.json                                         |
| [hcxEnterpriseSitesDeleteSample.js][hcxenterprisesitesdeletesample]                         | delete a HcxEnterpriseSite x-ms-original-file: 2025-09-01/HcxEnterpriseSites_Delete.json                                                 |
| [hcxEnterpriseSitesGetSample.js][hcxenterprisesitesgetsample]                               | get a HcxEnterpriseSite x-ms-original-file: 2025-09-01/HcxEnterpriseSites_Get.json                                                       |
| [hcxEnterpriseSitesListSample.js][hcxenterprisesiteslistsample]                             | list HcxEnterpriseSite resources by PrivateCloud x-ms-original-file: 2025-09-01/HcxEnterpriseSites_List.json                             |
| [hostsGetSample.js][hostsgetsample]                                                         | get a Host x-ms-original-file: 2025-09-01/Hosts_Get.json                                                                                 |
| [hostsListSample.js][hostslistsample]                                                       | list Host resources by Cluster x-ms-original-file: 2025-09-01/Hosts_List.json                                                            |
| [iscsiPathsCreateOrUpdateSample.js][iscsipathscreateorupdatesample]                         | create a IscsiPath x-ms-original-file: 2025-09-01/IscsiPaths_CreateOrUpdate.json                                                         |
| [iscsiPathsDeleteSample.js][iscsipathsdeletesample]                                         | delete a IscsiPath x-ms-original-file: 2025-09-01/IscsiPaths_Delete.json                                                                 |
| [iscsiPathsGetSample.js][iscsipathsgetsample]                                               | get a IscsiPath x-ms-original-file: 2025-09-01/IscsiPaths_Get.json                                                                       |
| [iscsiPathsListByPrivateCloudSample.js][iscsipathslistbyprivatecloudsample]                 | list IscsiPath resources by PrivateCloud x-ms-original-file: 2025-09-01/IscsiPaths_List.json                                             |
| [licensesCreateOrUpdateSample.js][licensescreateorupdatesample]                             | create a License x-ms-original-file: 2025-09-01/Licenses_CreateOrUpdate.json                                                             |
| [licensesDeleteSample.js][licensesdeletesample]                                             | delete a License x-ms-original-file: 2025-09-01/Licenses_Delete.json                                                                     |
| [licensesGetPropertiesSample.js][licensesgetpropertiessample]                               | just like ArmResourceActionSync, but with no request body. x-ms-original-file: 2025-09-01/Licenses_GetProperties.json                    |
| [licensesGetSample.js][licensesgetsample]                                                   | get a License x-ms-original-file: 2025-09-01/Licenses_Get.json                                                                           |
| [licensesListSample.js][licenseslistsample]                                                 | list License resources by PrivateCloud x-ms-original-file: 2025-09-01/Licenses_List.json                                                 |
| [locationsCheckQuotaAvailabilitySample.js][locationscheckquotaavailabilitysample]           | return quota for subscription by region x-ms-original-file: 2025-09-01/Locations_CheckQuotaAvailability.json                             |
| [locationsCheckTrialAvailabilitySample.js][locationschecktrialavailabilitysample]           | return trial status for subscription by region x-ms-original-file: 2025-09-01/Locations_CheckTrialAvailability.json                      |
| [maintenancesGetSample.js][maintenancesgetsample]                                           | get a Maintenance x-ms-original-file: 2025-09-01/Maintenances_Get.json                                                                   |
| [maintenancesInitiateChecksSample.js][maintenancesinitiatecheckssample]                     | initiate maintenance readiness checks x-ms-original-file: 2025-09-01/Maintenances_InitiateChecks.json                                    |
| [maintenancesListSample.js][maintenanceslistsample]                                         | list Maintenance resources by subscription ID x-ms-original-file: 2025-09-01/Maintenances_List.json                                      |
| [maintenancesRescheduleSample.js][maintenancesreschedulesample]                             | reschedule a maintenance x-ms-original-file: 2025-09-01/Maintenances_Reschedule.json                                                     |
| [maintenancesScheduleSample.js][maintenancesschedulesample]                                 | schedule a maintenance x-ms-original-file: 2025-09-01/Maintenances_Schedule.json                                                         |
| [operationsListSample.js][operationslistsample]                                             | list the operations for the provider x-ms-original-file: 2025-09-01/Operations_List.json                                                 |
| [placementPoliciesCreateOrUpdateSample.js][placementpoliciescreateorupdatesample]           | create a PlacementPolicy x-ms-original-file: 2025-09-01/PlacementPolicies_CreateOrUpdate.json                                            |
| [placementPoliciesDeleteSample.js][placementpoliciesdeletesample]                           | delete a PlacementPolicy x-ms-original-file: 2025-09-01/PlacementPolicies_Delete.json                                                    |
| [placementPoliciesGetSample.js][placementpoliciesgetsample]                                 | get a PlacementPolicy x-ms-original-file: 2025-09-01/PlacementPolicies_Get.json                                                          |
| [placementPoliciesListSample.js][placementpolicieslistsample]                               | list PlacementPolicy resources by Cluster x-ms-original-file: 2025-09-01/PlacementPolicies_List.json                                     |
| [placementPoliciesUpdateSample.js][placementpoliciesupdatesample]                           | update a PlacementPolicy x-ms-original-file: 2025-09-01/PlacementPolicies_Update.json                                                    |
| [privateCloudsCreateOrUpdateSample.js][privatecloudscreateorupdatesample]                   | create a PrivateCloud x-ms-original-file: 2025-09-01/PrivateClouds_CreateOrUpdate.json                                                   |
| [privateCloudsDeleteSample.js][privatecloudsdeletesample]                                   | delete a PrivateCloud x-ms-original-file: 2025-09-01/PrivateClouds_Delete.json                                                           |
| [privateCloudsGetSample.js][privatecloudsgetsample]                                         | get a PrivateCloud x-ms-original-file: 2025-09-01/PrivateClouds_Get.json                                                                 |
| [privateCloudsGetVcfLicenseSample.js][privatecloudsgetvcflicensesample]                     | get the license for the private cloud x-ms-original-file: 2025-09-01/PrivateClouds_GetVcfLicense.json                                    |
| [privateCloudsListAdminCredentialsSample.js][privatecloudslistadmincredentialssample]       | list the admin credentials for the private cloud x-ms-original-file: 2025-09-01/PrivateClouds_ListAdminCredentials.json                  |
| [privateCloudsListInSubscriptionSample.js][privatecloudslistinsubscriptionsample]           | list PrivateCloud resources by subscription ID x-ms-original-file: 2025-09-01/PrivateClouds_ListInSubscription.json                      |
| [privateCloudsListSample.js][privatecloudslistsample]                                       | list PrivateCloud resources by resource group x-ms-original-file: 2025-09-01/PrivateClouds_List.json                                     |
| [privateCloudsRotateNsxtPasswordSample.js][privatecloudsrotatensxtpasswordsample]           | rotate the NSX-T Manager password x-ms-original-file: 2025-09-01/PrivateClouds_RotateNsxtPassword.json                                   |
| [privateCloudsRotateVcenterPasswordSample.js][privatecloudsrotatevcenterpasswordsample]     | rotate the vCenter password x-ms-original-file: 2025-09-01/PrivateClouds_RotateVcenterPassword.json                                      |
| [privateCloudsUpdateSample.js][privatecloudsupdatesample]                                   | update a PrivateCloud x-ms-original-file: 2025-09-01/PrivateClouds_Update.json                                                           |
| [provisionedNetworksGetSample.js][provisionednetworksgetsample]                             | get a ProvisionedNetwork x-ms-original-file: 2025-09-01/ProvisionedNetworks_Get.json                                                     |
| [provisionedNetworksListSample.js][provisionednetworkslistsample]                           | list ProvisionedNetwork resources by PrivateCloud x-ms-original-file: 2025-09-01/ProvisionedNetworks_List.json                           |
| [pureStoragePoliciesCreateOrUpdateSample.js][purestoragepoliciescreateorupdatesample]       | create a PureStoragePolicy x-ms-original-file: 2025-09-01/PureStoragePolicies_CreateOrUpdate.json                                        |
| [pureStoragePoliciesDeleteSample.js][purestoragepoliciesdeletesample]                       | delete a PureStoragePolicy x-ms-original-file: 2025-09-01/PureStoragePolicies_Delete.json                                                |
| [pureStoragePoliciesGetSample.js][purestoragepoliciesgetsample]                             | get a PureStoragePolicy x-ms-original-file: 2025-09-01/PureStoragePolicies_Get.json                                                      |
| [pureStoragePoliciesListSample.js][purestoragepolicieslistsample]                           | list PureStoragePolicy resources by PrivateCloud x-ms-original-file: 2025-09-01/PureStoragePolicies_List.json                            |
| [scriptCmdletsGetSample.js][scriptcmdletsgetsample]                                         | get a ScriptCmdlet x-ms-original-file: 2025-09-01/ScriptCmdlets_Get.json                                                                 |
| [scriptCmdletsListSample.js][scriptcmdletslistsample]                                       | list ScriptCmdlet resources by ScriptPackage x-ms-original-file: 2025-09-01/ScriptCmdlets_List.json                                      |
| [scriptExecutionsCreateOrUpdateSample.js][scriptexecutionscreateorupdatesample]             | create a ScriptExecution x-ms-original-file: 2025-09-01/ScriptExecutions_CreateOrUpdate.json                                             |
| [scriptExecutionsDeleteSample.js][scriptexecutionsdeletesample]                             | delete a ScriptExecution x-ms-original-file: 2025-09-01/ScriptExecutions_Delete.json                                                     |
| [scriptExecutionsGetExecutionLogsSample.js][scriptexecutionsgetexecutionlogssample]         | return the logs for a script execution resource x-ms-original-file: 2025-09-01/ScriptExecutions_GetExecutionLogs.json                    |
| [scriptExecutionsGetSample.js][scriptexecutionsgetsample]                                   | get a ScriptExecution x-ms-original-file: 2025-09-01/ScriptExecutions_Get.json                                                           |
| [scriptExecutionsListSample.js][scriptexecutionslistsample]                                 | list ScriptExecution resources by PrivateCloud x-ms-original-file: 2025-09-01/ScriptExecutions_List.json                                 |
| [scriptPackagesGetSample.js][scriptpackagesgetsample]                                       | get a ScriptPackage x-ms-original-file: 2025-09-01/ScriptPackages_Get.json                                                               |
| [scriptPackagesListSample.js][scriptpackageslistsample]                                     | list ScriptPackage resources by PrivateCloud x-ms-original-file: 2025-09-01/ScriptPackages_List.json                                     |
| [serviceComponentsCheckAvailabilitySample.js][servicecomponentscheckavailabilitysample]     | return service component availability x-ms-original-file: 2025-09-01/ServiceComponents_CheckAvailability.json                            |
| [skusListSample.js][skuslistsample]                                                         | a list of SKUs. x-ms-original-file: 2025-09-01/Skus_List.json                                                                            |
| [virtualMachinesGetSample.js][virtualmachinesgetsample]                                     | get a VirtualMachine x-ms-original-file: 2025-09-01/VirtualMachines_Get.json                                                             |
| [virtualMachinesListSample.js][virtualmachineslistsample]                                   | list VirtualMachine resources by Cluster x-ms-original-file: 2025-09-01/VirtualMachines_List.json                                        |
| [virtualMachinesRestrictMovementSample.js][virtualmachinesrestrictmovementsample]           | enable or disable DRS-driven VM movement restriction x-ms-original-file: 2025-09-01/VirtualMachines_RestrictMovement.json                |
| [workloadNetworksCreateDhcpSample.js][workloadnetworkscreatedhcpsample]                     | create a WorkloadNetworkDhcp x-ms-original-file: 2025-09-01/WorkloadNetworks_CreateDhcp.json                                             |
| [workloadNetworksCreateDnsServiceSample.js][workloadnetworkscreatednsservicesample]         | create a WorkloadNetworkDnsService x-ms-original-file: 2025-09-01/WorkloadNetworks_CreateDnsService.json                                 |
| [workloadNetworksCreateDnsZoneSample.js][workloadnetworkscreatednszonesample]               | create a WorkloadNetworkDnsZone x-ms-original-file: 2025-09-01/WorkloadNetworks_CreateDnsZone.json                                       |
| [workloadNetworksCreatePortMirroringSample.js][workloadnetworkscreateportmirroringsample]   | create a WorkloadNetworkPortMirroring x-ms-original-file: 2025-09-01/WorkloadNetworks_CreatePortMirroring.json                           |
| [workloadNetworksCreatePublicIPSample.js][workloadnetworkscreatepublicipsample]             | create a WorkloadNetworkPublicIP x-ms-original-file: 2025-09-01/WorkloadNetworks_CreatePublicIP.json                                     |
| [workloadNetworksCreateSegmentsSample.js][workloadnetworkscreatesegmentssample]             | create a WorkloadNetworkSegment x-ms-original-file: 2025-09-01/WorkloadNetworks_CreateSegments.json                                      |
| [workloadNetworksCreateVMGroupSample.js][workloadnetworkscreatevmgroupsample]               | create a WorkloadNetworkVMGroup x-ms-original-file: 2025-09-01/WorkloadNetworks_CreateVMGroup.json                                       |
| [workloadNetworksDeleteDhcpSample.js][workloadnetworksdeletedhcpsample]                     | delete a WorkloadNetworkDhcp x-ms-original-file: 2025-09-01/WorkloadNetworks_DeleteDhcp.json                                             |
| [workloadNetworksDeleteDnsServiceSample.js][workloadnetworksdeletednsservicesample]         | delete a WorkloadNetworkDnsService x-ms-original-file: 2025-09-01/WorkloadNetworks_DeleteDnsService.json                                 |
| [workloadNetworksDeleteDnsZoneSample.js][workloadnetworksdeletednszonesample]               | delete a WorkloadNetworkDnsZone x-ms-original-file: 2025-09-01/WorkloadNetworks_DeleteDnsZone.json                                       |
| [workloadNetworksDeletePortMirroringSample.js][workloadnetworksdeleteportmirroringsample]   | delete a WorkloadNetworkPortMirroring x-ms-original-file: 2025-09-01/WorkloadNetworks_DeletePortMirroring.json                           |
| [workloadNetworksDeletePublicIPSample.js][workloadnetworksdeletepublicipsample]             | delete a WorkloadNetworkPublicIP x-ms-original-file: 2025-09-01/WorkloadNetworks_DeletePublicIP.json                                     |
| [workloadNetworksDeleteSegmentSample.js][workloadnetworksdeletesegmentsample]               | delete a WorkloadNetworkSegment x-ms-original-file: 2025-09-01/WorkloadNetworks_DeleteSegment.json                                       |
| [workloadNetworksDeleteVMGroupSample.js][workloadnetworksdeletevmgroupsample]               | delete a WorkloadNetworkVMGroup x-ms-original-file: 2025-09-01/WorkloadNetworks_DeleteVMGroup.json                                       |
| [workloadNetworksGetDhcpSample.js][workloadnetworksgetdhcpsample]                           | get a WorkloadNetworkDhcp x-ms-original-file: 2025-09-01/WorkloadNetworks_GetDhcp.json                                                   |
| [workloadNetworksGetDnsServiceSample.js][workloadnetworksgetdnsservicesample]               | get a WorkloadNetworkDnsService x-ms-original-file: 2025-09-01/WorkloadNetworks_GetDnsService.json                                       |
| [workloadNetworksGetDnsZoneSample.js][workloadnetworksgetdnszonesample]                     | get a WorkloadNetworkDnsZone x-ms-original-file: 2025-09-01/WorkloadNetworks_GetDnsZone.json                                             |
| [workloadNetworksGetGatewaySample.js][workloadnetworksgetgatewaysample]                     | get a WorkloadNetworkGateway x-ms-original-file: 2025-09-01/WorkloadNetworks_GetGateway.json                                             |
| [workloadNetworksGetPortMirroringSample.js][workloadnetworksgetportmirroringsample]         | get a WorkloadNetworkPortMirroring x-ms-original-file: 2025-09-01/WorkloadNetworks_GetPortMirroring.json                                 |
| [workloadNetworksGetPublicIPSample.js][workloadnetworksgetpublicipsample]                   | get a WorkloadNetworkPublicIP x-ms-original-file: 2025-09-01/WorkloadNetworks_GetPublicIP.json                                           |
| [workloadNetworksGetSample.js][workloadnetworksgetsample]                                   | get a WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_Get.json                                                           |
| [workloadNetworksGetSegmentSample.js][workloadnetworksgetsegmentsample]                     | get a WorkloadNetworkSegment x-ms-original-file: 2025-09-01/WorkloadNetworks_GetSegment.json                                             |
| [workloadNetworksGetVMGroupSample.js][workloadnetworksgetvmgroupsample]                     | get a WorkloadNetworkVMGroup x-ms-original-file: 2025-09-01/WorkloadNetworks_GetVMGroup.json                                             |
| [workloadNetworksGetVirtualMachineSample.js][workloadnetworksgetvirtualmachinesample]       | get a WorkloadNetworkVirtualMachine x-ms-original-file: 2025-09-01/WorkloadNetworks_GetVirtualMachine.json                               |
| [workloadNetworksListDhcpSample.js][workloadnetworkslistdhcpsample]                         | list WorkloadNetworkDhcp resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListDhcp.json                      |
| [workloadNetworksListDnsServicesSample.js][workloadnetworkslistdnsservicessample]           | list WorkloadNetworkDnsService resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListDnsServices.json         |
| [workloadNetworksListDnsZonesSample.js][workloadnetworkslistdnszonessample]                 | list WorkloadNetworkDnsZone resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListDnsZones.json               |
| [workloadNetworksListGatewaysSample.js][workloadnetworkslistgatewayssample]                 | list WorkloadNetworkGateway resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListGateways.json               |
| [workloadNetworksListPortMirroringSample.js][workloadnetworkslistportmirroringsample]       | list WorkloadNetworkPortMirroring resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListPortMirroring.json    |
| [workloadNetworksListPublicIPsSample.js][workloadnetworkslistpublicipssample]               | list WorkloadNetworkPublicIP resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListPublicIPs.json             |
| [workloadNetworksListSample.js][workloadnetworkslistsample]                                 | list WorkloadNetwork resources by PrivateCloud x-ms-original-file: 2025-09-01/WorkloadNetworks_List.json                                 |
| [workloadNetworksListSegmentsSample.js][workloadnetworkslistsegmentssample]                 | list WorkloadNetworkSegment resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListSegments.json               |
| [workloadNetworksListVMGroupsSample.js][workloadnetworkslistvmgroupssample]                 | list WorkloadNetworkVMGroup resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListVMGroups.json               |
| [workloadNetworksListVirtualMachinesSample.js][workloadnetworkslistvirtualmachinessample]   | list WorkloadNetworkVirtualMachine resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListVirtualMachines.json |
| [workloadNetworksUpdateDhcpSample.js][workloadnetworksupdatedhcpsample]                     | update a WorkloadNetworkDhcp x-ms-original-file: 2025-09-01/WorkloadNetworks_UpdateDhcp.json                                             |
| [workloadNetworksUpdateDnsServiceSample.js][workloadnetworksupdatednsservicesample]         | update a WorkloadNetworkDnsService x-ms-original-file: 2025-09-01/WorkloadNetworks_UpdateDnsService.json                                 |
| [workloadNetworksUpdateDnsZoneSample.js][workloadnetworksupdatednszonesample]               | update a WorkloadNetworkDnsZone x-ms-original-file: 2025-09-01/WorkloadNetworks_UpdateDnsZone.json                                       |
| [workloadNetworksUpdatePortMirroringSample.js][workloadnetworksupdateportmirroringsample]   | update a WorkloadNetworkPortMirroring x-ms-original-file: 2025-09-01/WorkloadNetworks_UpdatePortMirroring.json                           |
| [workloadNetworksUpdateSegmentsSample.js][workloadnetworksupdatesegmentssample]             | update a WorkloadNetworkSegment x-ms-original-file: 2025-09-01/WorkloadNetworks_UpdateSegments.json                                      |
| [workloadNetworksUpdateVMGroupSample.js][workloadnetworksupdatevmgroupsample]               | update a WorkloadNetworkVMGroup x-ms-original-file: 2025-09-01/WorkloadNetworks_UpdateVMGroup.json                                       |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node addonsCreateOrUpdateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
cross-env  node addonsCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[addonscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/addonsCreateOrUpdateSample.js
[addonsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/addonsDeleteSample.js
[addonsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/addonsGetSample.js
[addonslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/addonsListSample.js
[authorizationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/authorizationsCreateOrUpdateSample.js
[authorizationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/authorizationsDeleteSample.js
[authorizationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/authorizationsGetSample.js
[authorizationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/authorizationsListSample.js
[cloudlinkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/cloudLinksCreateOrUpdateSample.js
[cloudlinksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/cloudLinksDeleteSample.js
[cloudlinksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/cloudLinksGetSample.js
[cloudlinkslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/cloudLinksListSample.js
[clusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/clustersCreateOrUpdateSample.js
[clustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/clustersDeleteSample.js
[clustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/clustersGetSample.js
[clusterslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/clustersListSample.js
[clusterslistzonessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/clustersListZonesSample.js
[clustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/clustersUpdateSample.js
[datastorescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/datastoresCreateOrUpdateSample.js
[datastoresdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/datastoresDeleteSample.js
[datastoresgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/datastoresGetSample.js
[datastoreslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/datastoresListSample.js
[globalreachconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/globalReachConnectionsCreateOrUpdateSample.js
[globalreachconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/globalReachConnectionsDeleteSample.js
[globalreachconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/globalReachConnectionsGetSample.js
[globalreachconnectionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/globalReachConnectionsListSample.js
[hcxenterprisesitescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/hcxEnterpriseSitesCreateOrUpdateSample.js
[hcxenterprisesitesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/hcxEnterpriseSitesDeleteSample.js
[hcxenterprisesitesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/hcxEnterpriseSitesGetSample.js
[hcxenterprisesiteslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/hcxEnterpriseSitesListSample.js
[hostsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/hostsGetSample.js
[hostslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/hostsListSample.js
[iscsipathscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/iscsiPathsCreateOrUpdateSample.js
[iscsipathsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/iscsiPathsDeleteSample.js
[iscsipathsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/iscsiPathsGetSample.js
[iscsipathslistbyprivatecloudsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/iscsiPathsListByPrivateCloudSample.js
[licensescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/licensesCreateOrUpdateSample.js
[licensesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/licensesDeleteSample.js
[licensesgetpropertiessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/licensesGetPropertiesSample.js
[licensesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/licensesGetSample.js
[licenseslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/licensesListSample.js
[locationscheckquotaavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/locationsCheckQuotaAvailabilitySample.js
[locationschecktrialavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/locationsCheckTrialAvailabilitySample.js
[maintenancesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/maintenancesGetSample.js
[maintenancesinitiatecheckssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/maintenancesInitiateChecksSample.js
[maintenanceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/maintenancesListSample.js
[maintenancesreschedulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/maintenancesRescheduleSample.js
[maintenancesschedulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/maintenancesScheduleSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/operationsListSample.js
[placementpoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/placementPoliciesCreateOrUpdateSample.js
[placementpoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/placementPoliciesDeleteSample.js
[placementpoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/placementPoliciesGetSample.js
[placementpolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/placementPoliciesListSample.js
[placementpoliciesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/placementPoliciesUpdateSample.js
[privatecloudscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/privateCloudsCreateOrUpdateSample.js
[privatecloudsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/privateCloudsDeleteSample.js
[privatecloudsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/privateCloudsGetSample.js
[privatecloudsgetvcflicensesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/privateCloudsGetVcfLicenseSample.js
[privatecloudslistadmincredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/privateCloudsListAdminCredentialsSample.js
[privatecloudslistinsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/privateCloudsListInSubscriptionSample.js
[privatecloudslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/privateCloudsListSample.js
[privatecloudsrotatensxtpasswordsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/privateCloudsRotateNsxtPasswordSample.js
[privatecloudsrotatevcenterpasswordsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/privateCloudsRotateVcenterPasswordSample.js
[privatecloudsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/privateCloudsUpdateSample.js
[provisionednetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/provisionedNetworksGetSample.js
[provisionednetworkslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/provisionedNetworksListSample.js
[purestoragepoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/pureStoragePoliciesCreateOrUpdateSample.js
[purestoragepoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/pureStoragePoliciesDeleteSample.js
[purestoragepoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/pureStoragePoliciesGetSample.js
[purestoragepolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/pureStoragePoliciesListSample.js
[scriptcmdletsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/scriptCmdletsGetSample.js
[scriptcmdletslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/scriptCmdletsListSample.js
[scriptexecutionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/scriptExecutionsCreateOrUpdateSample.js
[scriptexecutionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/scriptExecutionsDeleteSample.js
[scriptexecutionsgetexecutionlogssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/scriptExecutionsGetExecutionLogsSample.js
[scriptexecutionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/scriptExecutionsGetSample.js
[scriptexecutionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/scriptExecutionsListSample.js
[scriptpackagesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/scriptPackagesGetSample.js
[scriptpackageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/scriptPackagesListSample.js
[servicecomponentscheckavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/serviceComponentsCheckAvailabilitySample.js
[skuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/skusListSample.js
[virtualmachinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/virtualMachinesGetSample.js
[virtualmachineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/virtualMachinesListSample.js
[virtualmachinesrestrictmovementsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/virtualMachinesRestrictMovementSample.js
[workloadnetworkscreatedhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksCreateDhcpSample.js
[workloadnetworkscreatednsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksCreateDnsServiceSample.js
[workloadnetworkscreatednszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksCreateDnsZoneSample.js
[workloadnetworkscreateportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksCreatePortMirroringSample.js
[workloadnetworkscreatepublicipsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksCreatePublicIPSample.js
[workloadnetworkscreatesegmentssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksCreateSegmentsSample.js
[workloadnetworkscreatevmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksCreateVMGroupSample.js
[workloadnetworksdeletedhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksDeleteDhcpSample.js
[workloadnetworksdeletednsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksDeleteDnsServiceSample.js
[workloadnetworksdeletednszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksDeleteDnsZoneSample.js
[workloadnetworksdeleteportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksDeletePortMirroringSample.js
[workloadnetworksdeletepublicipsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksDeletePublicIPSample.js
[workloadnetworksdeletesegmentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksDeleteSegmentSample.js
[workloadnetworksdeletevmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksDeleteVMGroupSample.js
[workloadnetworksgetdhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksGetDhcpSample.js
[workloadnetworksgetdnsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksGetDnsServiceSample.js
[workloadnetworksgetdnszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksGetDnsZoneSample.js
[workloadnetworksgetgatewaysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksGetGatewaySample.js
[workloadnetworksgetportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksGetPortMirroringSample.js
[workloadnetworksgetpublicipsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksGetPublicIPSample.js
[workloadnetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksGetSample.js
[workloadnetworksgetsegmentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksGetSegmentSample.js
[workloadnetworksgetvmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksGetVMGroupSample.js
[workloadnetworksgetvirtualmachinesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksGetVirtualMachineSample.js
[workloadnetworkslistdhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksListDhcpSample.js
[workloadnetworkslistdnsservicessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksListDnsServicesSample.js
[workloadnetworkslistdnszonessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksListDnsZonesSample.js
[workloadnetworkslistgatewayssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksListGatewaysSample.js
[workloadnetworkslistportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksListPortMirroringSample.js
[workloadnetworkslistpublicipssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksListPublicIPsSample.js
[workloadnetworkslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksListSample.js
[workloadnetworkslistsegmentssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksListSegmentsSample.js
[workloadnetworkslistvmgroupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksListVMGroupsSample.js
[workloadnetworkslistvirtualmachinessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksListVirtualMachinesSample.js
[workloadnetworksupdatedhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksUpdateDhcpSample.js
[workloadnetworksupdatednsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksUpdateDnsServiceSample.js
[workloadnetworksupdatednszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksUpdateDnsZoneSample.js
[workloadnetworksupdateportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksUpdatePortMirroringSample.js
[workloadnetworksupdatesegmentssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksUpdateSegmentsSample.js
[workloadnetworksupdatevmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/javascript/workloadNetworksUpdateVMGroupSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-avs?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/avs/arm-avs/README.md
